--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Panda-commerce</title>
 
     <!-- bootstrap style  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -13,7 +13,112 @@
 </head>
 
 <body>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container">
+                <a class="navbar-brand" href="#"><img src="images/logo.png"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Product</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">About Us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Contact Us</a>
+                        </li>
+                    </ul>
 
+                </div>
+            </div>
+        </nav>
+
+
+
+        <!-- image slider(bootstrap carousel) -->
+
+        <section class="container">
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active p-5">
+
+                        <div class="row bg-info d-flex align-items-center ">
+                            <div class="col-lg-7">
+                                <h1>Cool Dude Headphones</h1>
+                                <p>This is the best headphone in the world for people who just want to waste time in
+                                    front
+                                    of funky world.
+
+                                </p>
+                                <h1>$420</h1>
+                                <button class="btn-warning">Buy NOw</button>
+                            </div>
+                            <div class="col-lg-5">
+                                <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
+
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="carousel-item p-5">
+                        <div class="row bg-info d-flex align-items-center ">
+                            <div class="col-lg-7">
+                                <h1>Cool Dude Headphones</h1>
+                                <p>This is the best headphone in the world for people who just want to waste time in
+                                    front
+                                    of funky world.
+
+                                </p>
+                                h1>$420</h1>
+                                <button class="btn-warning">Buy NOw</button>
+                            </div>
+                            <div class="col-lg-5">
+                                <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="carousel-item p-5">
+                        <div class="row bg-info d-flex align-items-center">
+                            <div class="col-lg-7">
+                                <h1>Cool Dude Headphones</h1>
+                                <p>This is the best headphone in the world for people who just want to waste time in
+                                    front
+                                    of funky world.
+
+                                </p>
+                                h1>$420</h1>
+                                <button class="btn-warning">Buy NOw</button>
+                            </div>
+                            <div class="col-lg-5">
+                                <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
+    </header>
 
 
 
