--- a/index.html
+++ b/index.html
@@ -119,6 +119,35 @@
             </div>
         </section>
     </header>
+    <main>
+        <section class="container my-5">
+            <div class="row gy-5">
+                <div class="col-lg-4">
+
+                    <div class="p-3 border bg-warning d-flex align-items-center justify-content-center rounded-3">
+                        <h1>Watch</h1>
+                        <img src="images/categories/watch.png" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-4">
+
+                    <div class="p-3 border bg-success d-flex align-items-center justify-content-center rounded-3">
+                        <h1>Watch</h1>
+                        <img src="images/categories/bag.png" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-4">
+
+                    <div class="p-3 border bg-primary d-flex align-items-center justify-content-center rounded-3">
+                        <h1>Watch</h1>
+                        <img src="images/categories/shoes.png" alt="">
+                    </div>
+                </div>
+
+
+            </div>
+        </section>
+    </main>
 
 
 
