added subscription section

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Product</a>
+                            <a class="nav-link" href="#">Shoes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">About Us</a>
+                            <a class="nav-link" href="#">Backpack</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contact Us</a>
+                            <a class="nav-link" href="#">Subscribe</a>
                         </li>
                     </ul>
 
@@ -143,8 +143,115 @@
                         <img src="images/categories/shoes.png" alt="">
                     </div>
                 </div>
+            </div>
+        </section>
 
+        <!-- shoes section  -->
+        <section class="container my-5">
+            <h1>Shoes</h1>
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                <div class="col">
+                    <div class="card h-100 border-0 shadow-lg rounded-3">
+                        <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Supply 350</h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
+                                to additional..</p>
+                            <h2>$120</h2>
+                        </div>
+                        <div class="m-3">
+                            <button class="btn-warning rounded-3 border-0 ">Buy Now >></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100 border-0 shadow-lg rounded-3">
+                        <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Nike 360</h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
+                                to additional..</p>
+                            <h2>$120</h2>
+                        </div>
+                        <div class="m-3">
+                            <button class="btn-warning rounded-3 border-0 ">Buy Now >></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100 border-0 shadow-lg rounded-3">
+                        <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Red Airmax</h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
+                                to additional..</p>
+                            <h2>$120</h2>
+                        </div>
+                        <div class="m-3">
+                            <button class="btn-warning rounded-3 border-0 ">Buy Now >></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- backpack section  -->
 
+        <section class="container my-5">
+            <h1>Backpack</h1>
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                <div class="col">
+                    <div class="card h-100 border-0 shadow-lg rounded-3">
+                        <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Supply 350</h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
+                                to additional..</p>
+                            <h2>$120</h2>
+                        </div>
+                        <div class="m-3">
+                            <button class="btn-warning rounded-3 border-0 ">Buy Now >></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100 border-0 shadow-lg rounded-3">
+                        <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Nike 360</h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
+                                to additional..</p>
+                            <h2>$120</h2>
+                        </div>
+                        <div class="m-3">
+                            <button class="btn-warning rounded-3 border-0 ">Buy Now >></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100 border-0 shadow-lg rounded-3">
+                        <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Red Airmax</h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
+                                to additional..</p>
+                            <h2>$120</h2>
+                        </div>
+                        <div class="m-3">
+                            <button class="btn-warning rounded-3 border-0 ">Buy Now >></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Subscribe section  -->
+        <section style="height: 300px;"
+            class="container my-5 bg-info rounded-3 p-5 d-flex align-items-center justify-content-center">
+            <div class="">
+                <h1>LET'S STAY IN TOUCH</h1>
+                <p>Get updates on sales, specials and more</p>
+                <input type="email" placeholder="Your Email" required>
+                <br>
+                <button class="btn btn-warning">Submit</button>
             </div>
         </section>
     </main>
